--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,7 +47,7 @@ nav a {
 	height: 600px;
 	width: 100%;
 	background-size: 100% auto;
-	background-image: url("../images/pexels-photo-62279.jpeg");
+	background-image: url("../images/hero.jpeg");
 	background-repeat: no-repeat;
 }
 
